# opensm-jni-plugin

./: .gitignore  ChangeLog  INSTALL  META  Makefile.am  README.md  configure.ac  libOsmJniPi.map  opensm-jni-plugin.spec.in  osmJniPi_version.h.in
config/: ac_meta.m4
etc/opensm-plugin/: libOsmJniPi.conf
man/: OMS.7  OsmJniPi.8  osmConsole.8
src/: fifo.c  fifo.h  jni_NativeUtils.c  jni_NativeUtils.h  jni_Node.c  jni_Node.h  jni_OsmNativeInterface.c  jni_OsmNativeInterface.h  jni_PeerClass.c  jni_PeerClass.h  jni_Port.c  jni_Port.h  jni_SharedResources.c  jni_SharedResources.h  jni_Stats.c  jni_Stats.h  jni_Subnet.c  jni_Subnet.h  jni_Synchronization.c  jni_Synchronization.h  jni_SysInfo.c  jni_SysInfo.h  osmJniPi.c  osmJniPi.h
